@@ -1,6 +1,6 @@
 Package: gypsum
-Version: 1.1.3
-Date: 2024-05-27
+Version: 1.1.4
+Date: 2024-05-30
 Title: Interface to the gypsum REST API
 Description:
     Client for the gypsum REST API (https://gypsum.artifactdb.com), a cloud-based file store in the ArtifactDB ecosystem.
