@@ -40,6 +40,7 @@ export(setAccessToken)
 export(setPermissions)
 export(setQuota)
 export(startUpload)
+export(unlockProject)
 export(uploadDirectory)
 export(uploadFiles)
 export(validateMetadata)
